# qryptolocker

./: Cargo.toml  LICENSE  README.md
docs/: architecture.md
src/client/: Cargo.toml
src/client/src/: client.rs  crypto.rs  lib.rs  main.rs  metatable.rs
src/server/: Cargo.toml
src/server/src/: crypto.rs  lib.rs  main.rs  routes.rs  storage.rs  wordlist.rs
src/shared/: Cargo.toml
src/shared/src/: lib.rs
