[package]
name = "client"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "qrypto-client"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
chacha20poly1305 =  "0.10.1" 
crypto = "0.5.1"
flate2 = "1.1.5"
inquire = "0.9.1"
log = "0.4.29"
once_cell = "1.21.3"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sha3 = "0.10"
walkdir = "2.5.0"
libcrux-ml-kem = "0.0.4"
libcrux-ml-dsa = "0.0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
hex = "0.4"
shared = { path = "../shared/" }
zeroize = { version = "1.8.2", features = ["derive"] }
hkdf = "0.12.4"
hmac = "0.12.1"
