[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "qrypto-c2"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
flate2 = "1.1.5"
once_cell = "1.21.3"
rocket = { version = "0.5.1", features = ["json", "uuid"] }
serde = "1.0.228"
serde_json = "1.0.148"
sha3 = "0.10.8"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }
libcrux-ml-kem = "0.0.4"
libcrux-ml-dsa = "0.0.4"
rand = "0.8.0"
chacha20poly1305 = "0.10.1"
hex = "0.4"
crypto = "0.5.1"
shared = { path = "../shared" }
hkdf = "0.12.4"
argon2 = "0.5.3"
